@@ -2,7 +2,6 @@ package org.palladiosimulator.simexp.dsl.ea.optimizer.impl;
 
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import org.palladiosimulator.simexp.dsl.ea.api.IEAEvolutionStatusReceiver;
 import org.palladiosimulator.simexp.dsl.ea.optimizer.representation.SmodelBitChromosome;
@@ -30,7 +29,7 @@ public class EAReporter implements Consumer<EvolutionResult<BitGene, Double>> {
         Genotype<BitGene> genotype = phenotype.genotype();
         List<SmodelBitChromosome> chromosomes = genotype.stream()
             .map(g -> g.as(SmodelBitChromosome.class))
-            .collect(Collectors.toList());
+            .toList();
         List<OptimizableValue<?>> optimizables = normalizer.toOptimizableValues(chromosomes);
         double fitness = result.bestFitness();
         evolutionStatusReceiver.reportStatus(generation, optimizables, fitness);
